// Vitest Snapshot v1

exports[`within credentialsSelectors > the selectors match their snapshots > for the credentialsByToolNameSelector 1`] = `
{
  "source": {
    "apiKey": "TOGGLAPIKEY",
    "email": "test-user@test.com",
    "userId": "6001",
  },
  "target": {
    "apiKey": "CLOCKIFYAPIKEY",
    "email": "test-user@test.com",
    "userId": "clock-user-01",
  },
}
`;

exports[`within credentialsSelectors > the selectors match their snapshots > for the credentialsByToolNameSelector 2`] = `
{
  "clockify": {
    "apiKey": "CLOCKIFYAPIKEY",
    "email": "test-user@test.com",
    "userId": "clock-user-01",
  },
  "toggl": {
    "apiKey": "TOGGLAPIKEY",
    "email": "test-user@test.com",
    "userId": "6001",
  },
}
`;
